eks-inter-lab/modules/k8s_commons/values/argocd/istio_gateway.tpl.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: cicd
spec:
  selector:
    istio: gateway-private
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
      - ${host}
  - port:
      number: 443
      name: https
      protocol: HTTP
    hosts:
      - ${host}
