eks-inter-lab/modules/k8s_commons/values/argocd/istio_virtualservice.tpl.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd-virtualservice
  namespace: cicd
spec:
  hosts:
    - ${host}
  gateways:
    - argocd-gateway
  http:
    - match:
        - port: 80
      redirect:
        scheme: https
        port: 443
        redirectCode: 308

    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: argocd-server
            port:
              number: 80
